# avrokit

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: check.yml
avrokit/: __init__.py
avrokit/asyncio/: __init__.py  reader.py  writer.py
avrokit/io/: __init__.py  compact.py  reader.py  schema.py  writer.py
avrokit/tools/: __init__.py  __main__.py  base.py  cat.py  concat.py  count.py  filesort.py  fromparquet.py  getmeta.py  getschema.py  httpserver.py  partition.py  repair.py  stats.py  tojson.py  toparquet.py
avrokit/url/: __init__.py  base.py  factory.py  file.py  google.py  http.py  s3.py  utils.py
tests/: test_additional_coverage.py  test_asyncio.py  test_io.py  test_io_schema.py  test_plan_coverage.py  test_property_based.py  test_schema_advanced.py  test_tools_httpserver.py  test_tools_integration.py  test_tools_repair.py  test_url.py  test_url_file.py  test_url_google.py  test_url_http.py  test_url_s3.py
